--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shulme33.github.io/PersonalWebsite/",
   "name": "website",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://localhost:5000"
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
