--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://personalwebsiteserver-env.eba-nma2juzg.us-east-2.elasticbeanstalk.com/"
 }
