--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shulme33.github.io/PersonalWebsite/",
+  "homepage": ".",
   "name": "website",
   "version": "0.1.0",
   "private": true,
