--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,12 @@ phases:
   build:
     commands:
       - echo "Building the React app"
+      - pwd
+      - echo "Path above"
+      - echo "Npm version"
+      - npm --version
+      - echo "Node version"
+      - node --version
       - npm run build # Build the React frontend
 
 artifacts:
