--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
   build:
     commands:
       - echo "Building the React app"
+      - cd client
       - pwd
       - echo "Path above"
       - echo "Npm version"
