--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,8 @@ phases:
     commands:
       - echo "Installing dependencies"
       - npm install # Install npm dependencies
+      - cd client
+      - npm install
 
   build:
     commands:
