--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,4 +26,5 @@ phases:
 artifacts:
   files:
     - "**/*"
+    - appspec.yml
   base-directory: client/build # The build directory containing the static files
