Point at samhulme.com

--- a/client/nginx/mbs.samhulme.com.conf
+++ b/client/nginx/mbs.samhulme.com.conf
@@ -2,9 +2,9 @@
 
 server {
     listen 80;
-    server_name mbs.samhulme.com;
+    server_name samhulme.com;
 
-    root /var/www/personalwebsite/build;  # Path to your mbs.samhulme.com application files
+    root /var/www/personalwebsite/build;  # Path to your samhulme.com application files
     index index.html index.htm;
 
     location / {
